--- a/lyrics-exercise/index.html
+++ b/lyrics-exercise/index.html
@@ -3,10 +3,12 @@
 	<head>
 		<title>Oh Devil</title>
 		<link rel="stylesheet" type=text/css href="style-sheet.css">
+		 <link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet"> 
 	</head>
 	<h1>Oh Devil</h1>
-	<ul><ul><ul><ul><ul><ul><h2>Electric Guest</h2></ul></ul></ul></ul></ul></ul>
+	<ul><ul><ul><ul><h2>Electric Guest</h2></ul></ul></ul></ul></ul></ul>
 	<body>
+		<img class="Album" src="https://s1-ssl.dmcdn.net/o0K_W/x1080-3Q2.jpg"
 		<p class="verse">
     		<p id="name">Verse 1</p>
 			Oh, <span class="devil">Devil</span>, I know you're afraid
@@ -22,7 +24,7 @@
     		<span class="devil">Devil is back again</span>
 			<br>Oh I know the <span class="devil">devil</span> is back again
 			<br>The <span class="devil">devil</span> is back again
-			<br>So I know I’ll never look back again</p>
+			<br>So I know i’ll never look back again</p>
 		<p class="verse">
     		<p id="name">Verse 2</p>
     		Oh, <span class="devil">Devil</span>, I'm back for a while
@@ -38,7 +40,7 @@
     		<span class="devil">Devil</span> is back again
 			<br>Oh I know the devil is back again
 			<br>The <span class="devil">devil</span> is back again
-			<br>So I know I’ll never look back again</p>
+			<br>So I know i'll never look back again</p>
 		<p class="verse">
     		<p id="name">Verse 3</p>
 			Oh, I know
