--- a/complex-selectors-challenge/index.html
+++ b/complex-selectors-challenge/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8"></meta>
 	<title>Complex CSS Selectors Challenge</title>
-	<link href="http://wudesign.me/resources/complex-selectors/preset.css" rel="stylesheet"></link>
+	<link href="https://wudesign.me/resources/complex-selectors/preset.css" rel="stylesheet"></link>
 	<link href="styles.css" rel="stylesheet"></link>
 </head>
 <body>
