--- a/recipe/index.html
+++ b/recipe/index.html
@@ -87,5 +87,8 @@
 			</ul>
 			<hr class="style6">
 	</section>
+	<section>
+		<p id="link">Image from <a href="https://www.thrillist.com/news/nation/is-chili-a-soup-we-settled-the-debate">Thrillest</a>. Recipe by my mom</p>
+	</section>
 </body>
 </html>
