--- a/microsite/www/about.html
+++ b/microsite/www/about.html
@@ -2,38 +2,62 @@
 <html>
 <head>
 	<title>Pink Fairy Armadillo</title>
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="styles2.css">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet"> 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+		<script>
+
+		$( document ).ready(function() {
+
+			$(".menu_button i").click(function(){
+				$(".menu").toggleClass("open");
+			});
+
+			$(".menu_button i").click(function(){
+				$(".menu_button").toggleClass("close");
+			});
+
+		});
+
+	</script>	
 </head>
 <body>
 
-
-	<div class="topnav">
-		<i class="fa fa-bars" aria-hidden="true"></i>
-		<div class="menu">
-  		<a href="about.html">ABOUT</a>
-  		<a href="threats.html">THREATS</a>
-  		<a href="conservation.html">CONSERVATION EFFORTS</a>
-  		<a href="you.html">WHAT CAN YOU DO</a>
-  		<a href="https://en.wikipedia.org/wiki/Pink_fairy_armadillo">SOURCE</a>
-  		</div>
-  		<a href="index.html"><img class="icon" src="armadillo_icon2.png"></a>
-	</div> 
-
+<div class="menu_button close"><i class="fa fa-bars" aria-hidden="true"></i></div>
+	<div class="menu open">
+		<a href="index.html">HOME</a>
+		<a href="about.html">ABOUT</a>
+		<a href="threats.html">THREATS</a>
+		<a href="conservation.html">CONSERVATION EFFORTS</a>
+		<a href="you.html">WHAT CAN YOU DO</a>
+	</div>
 	
 
+	
+  
 
-	<h1>All about it</h1>
+	
+<h1>About the Pink Fairy</h1>
 
 	<div class="text">
-		<p id="1">The pink fairy armadillo (Chlamyphorus truncatus) or pichiciego is the smallest species of armadillo (mammals of the families Chlamyphoridae and Dasypodidae, recognized by a bony armor shell), first described by Richard Harlan in 1825.[3] This desert-adapted animal is endemic to central Argentina and can be found inhabiting sandy plains, dunes, and scrubby grasslands.</p>
-		<br>
-		<p id="2">Pink fairy armadillos have small eyes, silky yellowish white fur, and a flexible dorsal shell that is solely attached to its body by a thin dorsal membrane. In addition, its spatula-shaped tail protrudes from a vertical plate at the blunt rear of its shell. This creature exhibits nocturnal and solitary habits and has a diet that is mainly composed of insects, worms, snails, and various plant parts.  </p>
-		<br>
-		<br>
+		<p id="1">The pink fairy armadillo (Chlamyphorus truncatus) or pichiciego is the smallest species of armadillo (mammals of the families Chlamyphoridae and Dasypodidae, recognized by a bony armor shell), first described by Richard Harlan in 1825. This desert-adapted animal is endemic to central Argentina and can be found inhabiting sandy plains, dunes, and scrubby grasslands.</p>
+		
+		<p id="2">Pink fairy armadillos have small eyes, silky yellowish white fur, and a flexible dorsal shell that is solely attached to its body by a thin dorsal membrane. In addition, its spatula-shaped tail protrudes from a vertical plate at the blunt rear of its shell. This creature exhibits nocturnal and solitary habits and has a diet that is mainly composed of insects, worms, snails, and various plant parts. </p>
+	
+		<div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/AYw0WnLnR4vgk" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/pink-fairy-armadillo-AYw0WnLnR4vgk">via GIPHY</a></p>
 	</div>
+
+
+<div class="footer">
+	<p><a href="https://en.wikipedia.org/wiki/Pink_fairy_armadillo">Source: Wikipedia</a></p>
+	<p>Art Direction by Sarah Rhee</p>
+	<p>Designed by Jess Ewald</p>
+</div>
 
 
 
