--- a/microsite/www/you.html
+++ b/microsite/www/you.html
@@ -2,44 +2,65 @@
 <html>
 <head>
 	<title>Pink Fairy Armadillo</title>
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="styles2.css">
+
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet"> 
+
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+		<script>
+
+		$( document ).ready(function() {
+
+			$(".menu_button i").click(function(){
+				$(".menu").toggleClass("open");
+			});
+
+			$(".menu_button i").click(function(){
+				$(".menu_button").toggleClass("close");
+			});
+
+		});
+
+	</script>	
 </head>
 <body>
 
+		<a href="index.html"><img class="icon" src="images/pfa_icon.png"></a>
 
-	<div class="topnav">
-		<i class="fa fa-bars" aria-hidden="true"></i>
-		<div class="menu">
-  		<a href="about.html">ABOUT</a>
-  		<a href="threats.html">THREATS</a>
-  		<a href="conservation.html">CONSERVATION EFFORTS</a>
-  		<a href="you.html">WHAT CAN YOU DO</a>
-  		<a href="https://en.wikipedia.org/wiki/Pink_fairy_armadillo">SOURCE</a>
-  		</div>
-  		<a href="index.html"><img class="icon" src="armadillo_icon2.png"></a>
-	</div> 
-
+<div class="menu_button close"><i class="fa fa-bars" aria-hidden="true"></i></div>
+	<div class="menu open">
+		<a href="index.html">HOME</a>
+		<a href="about.html">ABOUT</a>
+		<a href="threats.html">THREATS</a>
+		<a href="conservation.html">CONSERVATION EFFORTS</a>
+		<a href="you.html">WHAT CAN YOU DO</a>
+	</div>
 	
 
-
-	<h1>What you can do!</h1>
+<h1>What YOU can do to help!</h1>
 
 	<div class="text">
 		<p id="1">People all over the world having been signing a petition asking the Argentinean Minister of Environment to do more to conserve the arid habitat this fantastically pink creature calls home — because the animal's life literally depends on it.</p>
-<br>
-		<p id="2">SIGN THE PETITION AND JOIN THE CAUSE!</p>
-<br>
-		<p id="3">https://www.thepetitionsite.com/802/845/878/save-the-pink-fairy-armadillo/?src=facebook_ads&campaign=sign_802845878&z00m=29038127</p>
-<br>
+		<p class="c"><a href="https://www.thepetitionsite.com/802/845/878/save-the-pink-fairy-armadillo/?src=facebook_ads&campaign=sign_802845878&z00m=29038127">CLICK HERE</a> TO SIGN THE PETITION AND JOIN THE CAUSE!</p>
+
 		<p id="4">"We must take care of this Earth and the animals on it," a Florida resident who signed the petition wrote.</p>
-		<br>
+	
 		<p id="5">"Why would anyone NOT want to save this precious creature?" another wrote. "It took millions of years to evolve, and it makes us humans look like idiots to allow it to die out through neglect."</p>
-<br>
-		<br>
+
 	</div>
+
+
+<div class="footer">
+	<p><a href="https://en.wikipedia.org/wiki/Pink_fairy_armadillo">Source: Wikipedia</a></p>
+	<p>Art Direction by Sarah Rhee</p>
+	<p>Designed by Jess Ewald</p>
+</div>
 
 
 
